# Eidola

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
config/: comment_styles.yaml  fleet.yaml  nurtured_accounts.yaml  persona_astro.yaml  schedule.yaml  session_limits.yaml
config/accounts/: example_account.yaml
config/devices/: phone_01.yaml
config/gmail/: phone_01.yaml
config/modes/: active_engage.yaml  feed_scroll.yaml  login.yaml  nurture_accounts.yaml  respond.yaml  warmup.yaml
prompts/: engager.md  login.md  navigator.md  observer.md  orchestrator.md  warmup.md
prompts/persona/: default_persona.md
scripts/: distribute_content.py  doctor.py  dump_screen.py  fleet_launch.py  fleet_proxy_start.py  fleet_scheduler.py  run_cleanup.py  run_telegram_bot.py  run_uniqualization_worker.py
src/eidola/: __init__.py  config.py  main.py
src/eidola/agents/: __init__.py  callbacks.py  engager.py  instagram_agent.py  navigator.py  observer.py  orchestrator.py  system_agent.py
src/eidola/bot/: __init__.py  alerts.py  handlers.py  keyboards.py  states.py  telegram_bot.py
src/eidola/content/: __init__.py  caption_uniqualizer.py  cleanup_manager.py  device_uploader.py  distributor.py  image_uniqualizer.py  metadata.py  models.py  mongo_content.py  posting_scheduler.py  uniqualization_worker.py  video_uniqualizer.py
src/eidola/device/: __init__.py  fingerprint.py  location.py  profile_manager.py  proxy_config.py
src/eidola/memory/: __init__.py  mongo_memory.py  (+3 more)
tests/: test_import_shadowing.py
(+27 files in other folders)
